--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,9 @@
 
         <script src="js/adherents/adherentsModule.js"></script>
         <script src="js/adherents/AdherentsController.js"></script>
+        <script src="js/medias/mediasModule.js"></script>
+        <script src="js/medias/MediasController.js"></script>
+        
 
     </head>
     <body>
