service requete -> tableau + change languages datatable

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,8 @@
         <script src="bower_components/angular/angular.js"></script>
         <!-- Angular Route-->
         <script src="bower_components/angular-route/angular-route.js"></script>
+        <!-- Angular i18n-->
+        <script src="bower_components/angular-i18n/angular-locale_fr-fr.js"></script>
 
         <!-- Angular dataTables -->
         <script src="bower_components/angular-datatables/dist/angular-datatables.js"></script>
@@ -37,10 +39,10 @@
 
         <script src="js/adherents/adherentsModule.js"></script>
         <script src="js/adherents/AdherentsController.js"></script>
+        <script src="js/adherents/adherentsService.js"></script>
         <script src="js/medias/mediasModule.js"></script>
         <script src="js/medias/MediasController.js"></script>
         
-
     </head>
     <body>
         <nav class="navbar navbar-default">
@@ -84,4 +86,6 @@
             <ng-view></ng-view>
 
         </body>
+
+
     </html>
