--- a/app/html/adherents/adherents.html
+++ b/app/html/adherents/adherents.html
@@ -1,4 +1,4 @@
-<table id="example" datatable="" class="display" cellspacing="0" width="100%">
+<table id="example" datatable="ng" class="display" cellspacing="0" width="100%">
     <thead>
         <tr>
             <th>ID</th>
