--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
         <script src="bower_components/jquery/dist/jquery.js"></script>
 
         <!-- Bootstrap -->
-        <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
         <!-- jQuery dataTables -->
         <script src="bower_components/datatables/media/js/jquery.dataTables.js"></script>
 
@@ -28,7 +28,6 @@
         <script src="bower_components/angular-datatables/dist/plugins/bootstrap/angular-datatables.bootstrap.js"></script>
 
         <link href="bower_components/angular-datatables/dist/css/angular-datatables.css" rel="stylesheet">
-        <link href="css/login.css" rel="stylesheet">
         
         <!-- Bootstrap -->
         <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
