app.js, ficheAdherent.html, index.html

--- a/app/html/adherents/ficheAdherent.html
+++ b/app/html/adherents/ficheAdherent.html
@@ -9,7 +9,7 @@
             <!-- BEGIN DOWNLOAD PANEL -->
             <div class="panel panel-default well">
                 <div class="panel-body">
-                    <form action="" class="form-horizontal " data-formname="ficheAdherent" method="post" id="ficheAdherent" novalidate="novalidate">
+                    <form action="" class="form-horizontal " name="ficheAdherentForm" ng-submit="submitForm(ficheAdherentForm.$valid)" id="ficheAdherentForm" novalidate>
                         <!-- Nom & Prenom -->
                         <div class="form-group">
                             <div class="col-sm-6">
@@ -17,7 +17,8 @@
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-account"></i>
                                     </div>
-                                    <input type="text" class="form-control" id="nom" placeholder="Nom" name="nom">
+                                    <input type="text" class="form-control" id="nom" ng-model="nom" placeholder="Nom" name="nom" required>
+                                    <p ng-show="ficheAdherentForm.nom.$invalid && !ficheAdherentForm.nom.$pristine" class="help-block">Le nom est requis</p>
                                 </div>
                             </div>
                             <div class="col-sm-6">
@@ -25,7 +26,8 @@
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-account"></i>
                                     </div>
-                                    <input type="text" class="form-control" id="prenom" placeholder="Prénom" name="prenom"></div>
+                                    <input type="text" class="form-control" id="prenom" ng-model="prenom" placeholder="Prénom" name="prenom" required></div>
+                                    <p ng-show="ficheAdherentForm.prenom.$invalid && !ficheAdherentForm.prenom.$pristine" class="help-block">Le prénom est requis</p>
                             </div>
                         </div>
 
@@ -36,7 +38,8 @@
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-cake"></i>
                                     </div>
-                                    <input type="text" class="form-control" id="dateNaissance" placeholder="Date de naissance" name="dateNaissance">
+                                    <input type="text" class="form-control" id="dateNaissance" ng-model="dateNaissance" placeholder="Date de naissance" name="dateNaissance" required>
+                                    <p ng-show="ficheAdherentForm.dateNaissance.$invalid && !ficheAdherentForm.dateNaissance.$pristine" class="help-block">Champ obligatoire</p>
                                 </div>
                             </div>
 
@@ -57,7 +60,8 @@
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-email"></i>
                                     </div>
-                                    <input type="text" class="form-control" id="email" placeholder="Adresse mail" name="email">
+                                    <input type="email" class="form-control" id="email" ng-model="email" placeholder="Adresse mail" name="email" required>
+                                    <p ng-show="ficheAdherentForm.email.$invalid && !ficheAdherentForm.email.$pristine" ng-pattern="emailFormat" class="help-block">Email non valide</p>
                                 </div>
                             </div>
                         </div>
@@ -69,7 +73,7 @@
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-home"></i>
                                     </div>
-                                    <input type="text" class="form-control" id="adresse" placeholder="N° et rue" name="adresse">
+                                    <input type="text" class="form-control" id="adresse" ng-model="adresse" placeholder="N° et rue" name="adresse">
                                 </div>
                             </div>
                         </div>
@@ -81,7 +85,7 @@
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-map-marker-radius"></i>
                                     </div>
-                                    <input type="text" class="form-control" id="codePostal" placeholder="Code postal" name="codePostal">
+                                    <input type="text" class="form-control" id="codePostal" ng-model="codePostal" placeholder="Code postal" name="codePostal">
                                 </div>
                             </div>
 
@@ -90,7 +94,7 @@
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-city"></i>
                                     </div>
-                                    <input type="text" class="form-control" id="ville" placeholder="Ville" name="ville"></div>
+                                    <input type="text" class="form-control" id="ville" ng-model="ville" placeholder="Ville" name="ville"></div>
                             </div>
                         </div>
 
@@ -101,7 +105,7 @@
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-calendar-blank"></i>
                                     </div>
-                                    <input type="text" class="form-control" id="DatePaiementCotisation" placeholder="Date paiement cotisation" name="DatePaiementCotisation">
+                                    <input type="text" class="form-control" id="DatePaiementCotisation" ng-model="DatePaiementCotisation" placeholder="Date paiement cotisation" name="DatePaiementCotisation">
                                 </div>
                             </div>
 
@@ -119,13 +123,13 @@
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-currency-eur"></i>
                                     </div>
-                                    <input type="text" class="form-control" id="MontantCotisation" placeholder="Montant cotisation" name="MontantCotisation"></div>
+                                    <input type="text" class="form-control" id="MontantCotisation" ng-model="MontantCotisation" placeholder="Montant cotisation" name="MontantCotisation"></div>
                             </div>
                         </div>
 
                         <div class="form-group">
                             <div class="col-sm-12">
-                                <button id="adherent-submit" type="submit" class="btn btn-default btn-info">Enregistrer</button>
+                                <button id="adherent-submit" type="submit" ng-disabled="ficheAdherentForm.$invalid" class="btn btn-default btn-info">Enregistrer</button>
                             </div>
                         </div>
                         <input type="hidden" value=""></form>
@@ -136,6 +140,6 @@
             <!-- END DOWNLOAD PANEL -->
         </div>
         <!-- end col-md-8 -->
-        
+
     </div>
 </div>
