creation fiche media -modification MediasController

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
 
         <!-- Bootstrap -->
         <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+
         <link href="bower_components/angular-datatables/dist/plugins/bootstrap/datatables.bootstrap.min.css" rel="stylesheet">
         <link href="bower_components/datatables/media/css/jquery.dataTables.min.css" rel="stylesheet">
         <!-- MDI ICON -->
@@ -70,7 +71,11 @@
                             </a>
                         </li>
                         <li>
+
                             <a href="#/ficheAdherent">Adhérents</a>
+
+                            <a href="#/ficheMedias">Adhérents</a>
+
                         </li>
 
                     </ul>
