--- a/app/html/medias/ficheMedia.html
+++ b/app/html/medias/ficheMedia.html
@@ -9,7 +9,7 @@
             <!-- BEGIN DOWNLOAD PANEL -->
             <div class="panel panel-default well">
                 <div class="panel-body">
-                    <form action="" class="form-horizontal " data-formname="ficheAdherent" method="post" id="ficheMedia" novalidate="novalidate">
+<!--                     <form action="" class="form-horizontal " data-formname="ficheAdherent" method="post" id="ficheMedia" novalidate="novalidate"> -->
                         <!-- Titre-->
                         <div class="form-group">
                             <div class="col-sm-12">
@@ -17,39 +17,38 @@
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-pen"></i>
                                     </div>
-                                    <input type="text" class="form-control" id="nom" placeholder="Titre" name="titre">
+                                    <input type="text" class="form-control" id="nom" placeholder="Titre" name="titre" ng-bind="titre" value="titre1">
                                 </div>
                             </div>
                         </div>
-
-                        <!-- Date naissance & age -->
-                        <div class="form-group">
-                            <div class="col-sm-12">
-                                <div class="input-group">
-                                    <div class="input-group-addon">
-                                        <i class="mdi mdi-book-open-page-variant"></i>
-                                    </div>
-                                    <input type="text" class="form-control" id="typeMedia" placeholder="Type de media" name="typeMedia">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
+                        <!-- Type de media -->
+                       <div class="form-group">
+                           <div class="col-sm-12">
+							<label for="singleSelect">Type</label>
+									<select name="SelectMediaType" id="SelectMediaTypeId" ng-model="data.SelectMediaType" multiple class="form-control">
+	      							<option value="Livre">Livre</option>
+	     							<option value="CD">CD</option>
+	      							<option value="DVD">DVD</option>
+	    						</select>
+	    					</div>
+             			</div>           
+             			<div class="form-group">
                             <div class="col-sm-12">
                                 <div class="input-group">
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-account"></i>
                                     </div>
-                                    <input type="text" class="form-control" id="auteur" placeholder="Auteur" name="auteur">
+                                    <input type="text" class="form-control" id="auteur" placeholder="Auteur" name="auteur" ng-bind="auteur" value="auteur1">
                                 </div>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-sm-12">
-                                <button id="media-submit" type="submit" class="btn btn-default btn-info">Enregistrer</button>
+                                <button id="media-submit" type="submit" class="btn btn-default btn-info" ng-click="ajout()">Enregistrer</button>
                             </div>
                         </div>
                         <input type="hidden" value="">
-                    </form>
+<!--                     </form> -->
                 </div>
                 <!-- end panel-body -->
             </div>
