--- a/app/index.html
+++ b/app/index.html
@@ -7,11 +7,15 @@
 
         <title>Mediatic</title>
 
+
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="bower_components/jquery/dist/jquery.js"></script>
 
+
         <!-- Bootstrap -->
         <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+
+
         <!-- jQuery dataTables -->
         <script src="bower_components/datatables/media/js/jquery.dataTables.js"></script>
 
@@ -27,6 +31,12 @@
         <!-- Angular dataTables bootstrap-->
         <script src="bower_components/angular-datatables/dist/plugins/bootstrap/angular-datatables.bootstrap.js"></script>
 
+
+        <!-- Angular dataTables column filter->
+		<script src="bower_components/angular-datatables/dist/plugins/columnfilter/angular-datatables.columnfilter.js"></script-->
+
+
+
         <link href="bower_components/angular-datatables/dist/css/angular-datatables.css" rel="stylesheet">
 
         <!-- Bootstrap -->
@@ -39,13 +49,13 @@
         <script src="js/app.js"></script>
         <script src="js/adherents/adherentsModule.js"></script>
         <script src="js/adherents/AdherentsController.js"></script>
+        <script src="js/adherents/FicheAdherentController.js"></script>
         <script src="js/adherents/adherentsService.js"></script>
+        <script src="js/adherents/ficheAdherentService.js"></script>
         <script src="js/medias/mediasModule.js"></script>
         <script src="js/medias/MediasController.js"></script>
-
         <script src="js/login/loginModule.js"></script>
         <script src="js/login/LoginController.js"></script>
-
     </head>
     <body>
         <nav class="navbar navbar-default">
@@ -70,9 +80,14 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#/ficheAdherent">Adhérents</a>
+                            <a href="#/adherents">Adhérents</a>
                         </li>
-
+                        <li>
+                            <a href="#/ficheAdherent">Fiche Adhérent</a>
+                        </li>
+                        <li>
+                            <a href="#/ficheMedias">Fiche Média</a>
+                        </li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
