--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,9 @@
         <script src="bower_components/angular-route/angular-route.js"></script>
         <!-- Angular i18n-->
         <script src="bower_components/angular-i18n/angular-locale_fr-fr.js"></script>
+        <!-- Angular date-picker -->
+        <script src="bower_components/angularjs-datepicker/dist/angular-datepicker.min.js"></script>
+        <link href="bower_components/angularjs-datepicker/dist/angular-datepicker.min.css" rel="stylesheet">
 
         <!-- Angular dataTables -->
         <script src="bower_components/angular-datatables/dist/angular-datatables.js"></script>
@@ -28,6 +31,9 @@
         <script src="bower_components/angular-datatables/dist/plugins/bootstrap/angular-datatables.bootstrap.js"></script>
 
         <link href="bower_components/angular-datatables/dist/css/angular-datatables.css" rel="stylesheet">
+
+        <!-- Moment.js-->
+        <script src="bower_components/moment/moment.js"></script>
 
         <!-- Bootstrap -->
         <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
@@ -58,7 +64,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#/">Brand</a>
+                    <a class="navbar-brand" href="#/"><i class="mdi mdi-book-open-page-variant"></i></a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
