--- a/app/html/adherents/ficheAdherent.html
+++ b/app/html/adherents/ficheAdherent.html
@@ -26,14 +26,9 @@
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-account"></i>
                                     </div>
-<<<<<<< HEAD
-                                    <input type="text" class="form-control" id="prenom" ng-model="adherent.prenom" placeholder="Prénom" name="prenom" required></div>
-                                    <p ng-show="ficheAdherentForm.prenom.$invalid && !ficheAdherentForm.prenom.$pristine" class="help-block">Le prénom est requis</p>
-=======
-                                    <input type="text" class="form-control" id="prenom" ng-model="prenom" placeholder="Prénom " name="prenom" required>
+                                    <input type="text" class="form-control" id="prenom" ng-model="adherent.prenom" placeholder="Prénom " name="prenom" required>
                                 </div>
                                 <p ng-show="ficheAdherentForm.prenom.$invalid && ficheAdherentForm.prenom.$untouched" class="help-block">Le prénom est requis</p>
->>>>>>> 2041ef73df6844f86ad83903e9de94bdc2453146
                             </div>
                         </div>
 
@@ -44,15 +39,8 @@
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-cake"></i>
                                     </div>
-<<<<<<< HEAD
                                     <input type="text" class="form-control" id="dateNaissance" ng-model="adherent.date_naissance" placeholder="Date de naissance" name="dateNaissance" required>
                                     <p ng-show="ficheAdherentForm.dateNaissance.$invalid && !ficheAdherentForm.dateNaissance.$pristine" class="help-block">Champ obligatoire</p>
-=======
-
-                                    <input type="text" class="form-control" id="dateNaissance" ng-model="dateNaissance" placeholder="Date de naissance" name="dateNaissance" required>
-                                    <p ng-show="ficheAdherentForm.dateNaissance.$invalid && !ficheAdherentForm.dateNaissance.$pristine" class="help-block">Champ obligatoire</p>
-
->>>>>>> 2041ef73df6844f86ad83903e9de94bdc2453146
                                 </div>
                             </div>
 
@@ -73,28 +61,15 @@
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-email"></i>
                                     </div>
-<<<<<<< HEAD
-                                    <input type="email" class="form-control" id="email" ng-model="adherent.email" placeholder="Adresse mail" name="email" required>
-                                    <p ng-show="ficheAdherentForm.email.$invalid && !ficheAdherentForm.email.$pristine" ng-pattern="emailFormat" class="help-block">Email non valide</p>
-=======
-<<<<<<< HEAD
-
-                                    <input type="email" class="form-control" id="email" ng-model="email" placeholder="Adresse mail" name="email" required>
-                                    <p ng-show="ficheAdherentForm.email.$invalid && !ficheAdherentForm.email.$pristine" ng-pattern="emailFormat" class="help-block">Email non valide</p>
-                                    <input type="email" class="form-control" id="email" ng-model="inputEmail" placeholder="Adresse mail" name="inputEmail"  ng-pattern="/^[-a-z0-9~!$%^&*_=+}{\'?]+(\.[-a-z0-9~!$%^&*_=+}{\'?]+)*@([a-z0-9_][-a-z0-9_]*(\.[-a-z0-9_]+)*\.(aero|arpa|biz|com|coop|edu|gov|info|int|mil|museum|name|net|org|pro|travel|mobi|[a-z][a-z])|([0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}))(:[0-9]{1,5})?$/i" required>
-
-=======
                                     <input
                                         type="text"
                                         class="form-control"
                                         id="email"
-                                        ng-model="inputEmail"
+                                        ng-model="adherent.email"
                                         placeholder="Adresse mail"
                                         name="inputEmail"
                                         ng-pattern="/^[-a-z0-9~!$%^&*_=+}{\'?]+(\.[-a-z0-9~!$%^&*_=+}{\'?]+)*@([a-z0-9_][-a-z0-9_]*(\.[-a-z0-9_]+)*\.(aero|arpa|biz|com|coop|edu|gov|info|int|mil|museum|name|net|org|pro|travel|mobi|[a-z][a-z])|([0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}))(:[0-9]{1,5})?$/i"
                                         required>
->>>>>>> c9200c52397a21bf81f4fd5ba0c44eb0ef42c333
->>>>>>> 2041ef73df6844f86ad83903e9de94bdc2453146
                                 </div>
                             </div>
                         </div>
@@ -106,13 +81,7 @@
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-home"></i>
                                     </div>
-<<<<<<< HEAD
                                     <input type="text" class="form-control" id="adresse" ng-model="adherent.adresse.ligne1" placeholder="N° et rue" name="adresse">
-=======
-
-                                    <input type="text" class="form-control" id="adresse" ng-model="adresse" placeholder="N° et rue" name="adresse">
-
->>>>>>> 2041ef73df6844f86ad83903e9de94bdc2453146
                                 </div>
                             </div>
                         </div>
@@ -124,12 +93,7 @@
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-map-marker-radius"></i>
                                     </div>
-<<<<<<< HEAD
                                     <input type="text" class="form-control" id="codePostal" ng-model="adherent.adresse.codepostal" placeholder="Code postal" name="codePostal">
-=======
-                                    <input type="text" class="form-control" id="codePostal" ng-model="codePostal" placeholder="Code postal" name="codePostal">
-
->>>>>>> 2041ef73df6844f86ad83903e9de94bdc2453146
                                 </div>
                             </div>
 
@@ -138,12 +102,7 @@
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-city"></i>
                                     </div>
-<<<<<<< HEAD
                                     <input type="text" class="form-control" id="ville" ng-model="adherent.adresse.ville" placeholder="Ville" name="ville"></div>
-=======
-                                    <input type="text" class="form-control" id="ville" ng-model="ville" placeholder="Ville" name="ville"></div>
-
->>>>>>> 2041ef73df6844f86ad83903e9de94bdc2453146
                             </div>
                         </div>
 
@@ -176,12 +135,7 @@
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-currency-eur"></i>
                                     </div>
-<<<<<<< HEAD
                                     <input type="text" class="form-control" id="MontantCotisation" ng-model="adherent.montantCotisation" placeholder="Montant cotisation" name="MontantCotisation"></div>
-=======
-                                    <input type="text" class="form-control" id="MontantCotisation" ng-model="MontantCotisation" placeholder="Montant cotisation" name="MontantCotisation"></div>
-
->>>>>>> 2041ef73df6844f86ad83903e9de94bdc2453146
                             </div>
                         </div>
 
