--- a/app/html/adherents/ficheAdherent.html
+++ b/app/html/adherents/ficheAdherent.html
@@ -33,7 +33,7 @@
                                         <i class="mdi mdi-account"></i>
                                     </div>
 
-                                    <input type="text" class="form-control" id="prenom" ng-model="prenom" placeholder="Prénom " name="prenom" required>
+                                    <input type="text" class="form-control" id="prenom" ng-model="adherent.prenom" placeholder="Prénom " name="prenom" required>
                                 </div>
                                 <p ng-show="ficheAdherentForm.prenom.$invalid && ficheAdherentForm.prenom.$untouched" class="help-block">Le prénom est requis</p>
                             </div>
@@ -48,7 +48,7 @@
                                         <i class="mdi mdi-cake"></i>
                                     </div>
                                     <datepicker date-format="dd/MM/yyyy">
-                                    <input type="text" class="form-control" id="dateNaissance" ng-model="dateNaissance" placeholder="Date de naissance" name="dateNaissance" required>
+                                    <input type="text" class="form-control" id="dateNaissance" ng-model="adherent.date_naissance" placeholder="Date de naissance" name="dateNaissance" required>
                                 </div>
                                 </datepicker>
                                 <p ng-show="ficheAdherentForm.dateNaissance.$invalid && ficheAdherentForm.dateNaissance.$untouched" class="help-block">Champ obligatoire</p>
@@ -60,7 +60,7 @@
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-timer-sand"></i>
                                     </div>
-                                    <input type="text" class="form-control" id="age" placeholder="Âge" name="age" ng-model="age" ng-bind="calculAge()">
+                                    <input type="text" class="form-control" id="age" placeholder="Âge" name="age" ng-model="adherent.age" ng-bind="calculAge()">
                                 </div>
                             </div>
                         </div>
@@ -77,7 +77,7 @@
                                         type="text"
                                         class="form-control"
                                         id="email"
-                                        ng-model="inputEmail"
+                                        ng-model="adherent.email"
                                         placeholder="Adresse mail"
                                         name="inputEmail"
                                         ng-pattern="/^[-a-z0-9~!$%^&*_=+}{\'?]+(\.[-a-z0-9~!$%^&*_=+}{\'?]+)*@([a-z0-9_][-a-z0-9_]*(\.[-a-z0-9_]+)*\.(aero|arpa|biz|com|coop|edu|gov|info|int|mil|museum|name|net|org|pro|travel|mobi|[a-z][a-z])|([0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}))(:[0-9]{1,5})?$/i"
@@ -96,7 +96,7 @@
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-home"></i>
                                     </div>
-                                    <input type="text" class="form-control" id="adresse" ng-model="adresse" placeholder="N° et rue" name="adresse">
+                                    <input type="text" class="form-control" id="adresse" ng-model="adherent.adresse.ligne1" placeholder="N° et rue" name="adresse">
                                 </div>
                             </div>
                         </div>
@@ -109,7 +109,7 @@
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-map-marker-radius"></i>
                                     </div>
-                                    <input type="text" class="form-control" id="codePostal" ng-model="codePostal" placeholder="Code postal" name="codePostal">
+                                    <input type="text" class="form-control" id="codePostal" ng-model="adherent.adresse.codepostal" placeholder="Code postal" name="codePostal">
                                 </div>
                             </div>
 
@@ -119,7 +119,7 @@
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-city"></i>
                                     </div>
-                                    <input type="text" class="form-control" id="ville" ng-model="ville" placeholder="Ville" name="ville"></div>
+                                    <input type="text" class="form-control" id="ville" ng-model="adherent.adresse.ville" placeholder="Ville" name="ville"></div>
                             </div>
                         </div>
 
@@ -132,7 +132,7 @@
                                         <i class="mdi mdi-calendar-blank"></i>
                                     </div>
                                     <datepicker date-format="dd/MM/yyyy">
-                                    <input type="text" class="form-control" id="datePaiementCotisation" ng-model="datePaiementCotisation" placeholder="Date paiement cotisation" name="datePaiementCotisation">
+                                    <input type="text" class="form-control" id="datePaiementCotisation" ng-model="adherent.datePaiementCotisation" placeholder="Date paiement cotisation" name="datePaiementCotisation">
                                 </datepicker>
                                 </div>
                             </div>
@@ -144,7 +144,7 @@
                                         <i class="mdi mdi-calendar"></i>
                                     </div>
                                     <datepicker date-format="dd/MM/yyyy">
-                                    <input type="text" class="form-control" id="dateFinAbonnement" placeholder="Date fin abonnement" name="dateFinAbonnement" ng-model="dateFinAbonnement" ng-bind="finCotisation()">
+                                    <input type="text" class="form-control" id="dateFinAbonnement" placeholder="Date fin abonnement" name="dateFinAbonnement" ng-model="adherent.dateFinAbonnement" ng-bind="finCotisation()">
                                     </datepicker>
                                 </div>
                             </div>
@@ -155,7 +155,7 @@
                                     <div class="input-group-addon">
                                         <i class="mdi mdi-currency-eur"></i>
                                     </div>
-                                    <input type="text" class="form-control" id="MontantCotisation" ng-model="MontantCotisation" placeholder="Montant cotisation" name="MontantCotisation"></div>
+                                    <input type="text" class="form-control" id="MontantCotisation" ng-model="adherent.montantCotisation" placeholder="Montant cotisation" name="MontantCotisation"></div>
                             </div>
                         </div>
 
