--- a/app/html/login/login.html
+++ b/app/html/login/login.html
@@ -8,7 +8,11 @@
                 <form class="login" ng-submit="connection()">
 	                <input type="text" placeholder="Username" ng-model="login" id="login"/>
 	                <input type="password" placeholder="Password" ng-model="pass" id="pass"/>
-	                <input type="submit" value="Sign In"  class="btn btn-success btn-sm" />
+                	<input type="submit" value="Sign In"  class="btn btn-success btn-sm" />
+                </form>
+                <form class="login" ng-submit="deconnection()">
+	                
+                	<input type="submit" value="Sign Out"  class="btn btn-success btn-sm" />
                 </form>
             </div>
         </div>
