--- a/app/html/adherents/ficheAdherent.html
+++ b/app/html/adherents/ficheAdherent.html
@@ -8,7 +8,7 @@
             <!-- BEGIN DOWNLOAD PANEL -->
             <div class="panel panel-default well" ng-show="true">
                 <div class="panel-body">
-                    <form action="" class="form-horizontal " name="ficheAdherentForm" ng-submit="submitForm(ficheAdherentForm.$valid)" id="ficheAdherentForm" novalidate>
+                    <form class="form-horizontal " name="ficheAdherentForm" ng-submit="ajout()" id="ficheAdherentForm" novalidate>
 
                         <!-- Nom & Prenom -->
                         <div class="form-group">
