--- a/app/html/adherents/ficheAdherent.html
+++ b/app/html/adherents/ficheAdherent.html
@@ -147,7 +147,7 @@
 
                         <div class="form-group">
                             <div class="col-sm-12">
-                                <button id="adherent-submit" type="submit" ng-disabled="ficheAdherentForm.$invalid" class="btn btn-default btn-info">Enregistrer</button>
+                                <button id="adherent-submit" type="submit" ng-disabled="ficheAdherentForm.$invalid" ng-show="adminConnect()" class="btn btn-default btn-info">Enregistrer</button>
 
                             </div>
                         </div>
