--- a/app/html/medias/medias.html
+++ b/app/html/medias/medias.html
@@ -1,26 +1,26 @@
 <div class="container">
 
-	<form ng-submit="recherche">
-		<div class="form-group">
-	    	<label for="singleSelect">Titre</label>
-			<input type="contient" ng-model="titreAChercher" placeholder="titre" class="form-control"/>
-		</div>
-		<div class="form-group">
-			<label for="singleSelect">Auteur</label>	
-			<input type="contient" ng-model="auteurAChercher" placeholder="nom auteur" class="form-control"/>
-		</div>
-		<div class="form-group">
-			<label for="singleSelect">Type</label>
-				<select name="SelectMediaType" id="SelectMediaTypeId" ng-model="data.SelectMediaType" multiple class="form-control">
-	      			<option value="Livre">Livre</option>
-	     			<option value="CD">CD</option>
-	      			<option value="DVD">DVD</option>
-	    		</select>
-	    </div>
-	    <div style="text-align:center">
-	        <button type="submit" class="btn btn-default">Recherche</button>	
-		</div>
-	</form>
+<!-- 	<form ng-submit="recherche"> -->
+<!-- 		<div class="form-group"> -->
+<!-- 	    	<label for="singleSelect">Titre</label> -->
+<!-- 			<input type="contient" ng-model="titreAChercher" placeholder="titre" class="form-control"/> -->
+<!-- 		</div> -->
+<!-- 		<div class="form-group"> -->
+<!-- 			<label for="singleSelect">Auteur</label>	 -->
+<!-- 			<input type="contient" ng-model="auteurAChercher" placeholder="nom auteur" class="form-control"/> -->
+<!-- 		</div> -->
+<!-- 		<div class="form-group"> -->
+<!-- 			<label for="singleSelect">Type</label> -->
+<!-- 				<select name="SelectMediaType" id="SelectMediaTypeId" ng-model="data.SelectMediaType" multiple class="form-control"> -->
+<!-- 	      			<option value="Livre">Livre</option> -->
+<!-- 	     			<option value="CD">CD</option> -->
+<!-- 	      			<option value="DVD">DVD</option> -->
+<!-- 	    		</select> -->
+<!-- 	    </div> -->
+<!-- 	    <div style="text-align:center"> -->
+<!-- 	        <button type="submit" class="btn btn-default">Recherche</button>	 -->
+<!-- 		</div> -->
+<!-- 	</form> -->
 	<form ng-submit="creationMedia">
 		<div style="text-align:center; margin-top:10px;">
 		<a href="#/ficheMedias" class="btn btn-warning">Nouveau</a>
